--- a/team.html
+++ b/team.html
@@ -89,7 +89,7 @@
                                  alt="Jobs Pic">
 
                             <p class="aside-p">
-                                Стив Джобс е бил учител в на Наков.
+                                Стив Джобс е бил учител на Наков.
                             </p>
                         </a>
                     </div>
@@ -148,7 +148,7 @@
                             <figcaption class="figure-caption">Ники Банкин</figcaption>
                         </figure>
                         <div class="ekip-text col-sm-9 col-xs-9">
-                            Ники Банкин е такъв талантлив дизайнер, че когато Бог(Наков) създавал Земята, го извигал
+                            Ники Банкин е такъв талантлив дизайнер, че когато Бог(Наков) създавал Земята, го извикал
                             да Му помогне. Ники с готовност приел, но проекта по който работил най-усърдно, били
                             женските форми!
                         </div>
@@ -207,7 +207,7 @@
                             <figcaption class="figure-caption">Наско</figcaption>
                         </figure>
                         <div class="ekip-text col-sm-9 col-xs-9 no-margin">
-                            Наско има коефициент на ителигентност 221! С едно повече от най-умния човек на Земята, което
+                            Наско има коефициент на интелигентност 221! С едно повече от най-умния човек на Земята, което
                             си е
                             време-пространствен парадокс. Той спокойно би могъл да отиде в Церн и да открие няколко нови
                             закона
