--- a/winners.html
+++ b/winners.html
@@ -67,7 +67,11 @@
             <div class="col-sm-3">
                 <img src="resources/images/cash.png" class="img-responsive winners-img">
             </div>
-            <div class="winners-text col-sm-9">Тук ще намерите кратка история на това как нашите победители са стигнали до тук, тежките мъки, на които са били подложение и стоическите кодове, които са ги направили толкова богати, че да не им се налага да искат пари на заем от приятели, за да си погасят вноската по кредита.
+            <div class="winners-text col-sm-9">Тук ще намерите кратка история на това как нашите
+                победители са стигнали до тук,
+                тежките мъки, на които са били подложени и
+                стоическите кодове, които са ги направили толкова богати,
+                че да не им се налага да искат пари на заем от приятели, за да си погасят вноската по кредита.
             </div>
         </div>
     </div>
@@ -152,7 +156,7 @@
                         </div>
                         <div class="winners-text col-sm-9">
                             </br>
-                            Марк Зъкърбърг е учил в СофтУни. "Един от НЕ - топ судентите ми!" - както го определя Наков.
+                            Марк Зъкърбърг е учил в СофтУни. "Един от НЕ - топ студентите ми!" - както го определя Наков.
                             Обиден Марк се депресира и напуска. В търсене на нови приятели, с които да сподели мъката си
                             той създава фейсбук.
                         </div>
@@ -188,7 +192,7 @@
                             </br>
                             Сергей и Лари са конкуренти на Наков, още от детската градина. И те също искат да създадат
                             обучение по програмиране. Неспособни да се сравняват с Наков и неговата система, те основават
-                            обиковена търсачка в интернет.
+                            обикновена търсачка в интернет.
                         </div>
                     </div>
                 </div>
