--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                                  alt="Jobs Pic">
 
                             <p class="aside-p">
-                                Стив Джобс е бил учител в на Наков.
+                                Стив Джобс е бил учител на Наков.
                             </p>
                         </a>
                     </div>
@@ -155,16 +155,16 @@
                         <div class="item">
                             <img src="resources/images/nakov2.jpg" alt="Image" />
                             <div class="carousel-caption">
-                                <h3>More Sell $</h3>
-                                <p>Lorem ipsum...</p>
+                                <h3>Искаш да станеш много богат?</h3>
+                                <p>Това е твоят шанс</p>
                             </div>
                         </div>
 
                         <div class="item">
                             <img src="resources/images/nakov2.jpg" alt="Image" />
                             <div class="carousel-caption">
-                                <h3>More Sell $</h3>
-                                <p>Lorem ipsum...</p>
+                                <h3>Искаш да станеш много богат?</h3>
+                                <p>Това е твоят шанс</p>
                             </div>
                         </div>
                     </div>
