Ники Пънчев added!

--- a/index.html
+++ b/index.html
@@ -131,20 +131,19 @@
 
         </aside>
 
-        <section id="main-section" class="col-sm-9">
+        <section id="main-section container-fluid" class="col-sm-9">
                 <div id="myCarousel" class="carousel slide">
                     <!-- Indicators -->
                     <ol class="carousel-indicators">
                         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
                         <li data-target="#myCarousel" data-slide-to="1"></li>
-                        <li data-target="#myCarousel" data-slide-to="2"></li>
                     </ol>
 
                     <!-- Wrapper for slides -->
                     <div class="carousel-inner" role="listbox">
                         <div class="item active">
                             <a href="http://www.softuni.bg" target="_blank">
-                                <img src="resources/images/nakov2.jpg" alt="Image" />
+                                <img src="resources/images/intro.jpg" alt="Image" />
                                 <div class="carousel-caption">
                                     <h3>Искаш да станеш много богат?</h3>
                                     <p>Това е твоят шанс</p>
@@ -153,15 +152,7 @@
                         </div>
 
                         <div class="item">
-                            <img src="resources/images/nakov2.jpg" alt="Image" />
-                            <div class="carousel-caption">
-                                <h3>Искаш да станеш много богат?</h3>
-                                <p>Това е твоят шанс</p>
-                            </div>
-                        </div>
-
-                        <div class="item">
-                            <img src="resources/images/nakov2.jpg" alt="Image" />
+                            <img src="resources/images/Punchev2.jpg" alt="Image" />
                             <div class="carousel-caption">
                                 <h3>Искаш да станеш много богат?</h3>
                                 <p>Това е твоят шанс</p>
