Added Fake add to Last page

--- a/not-fun.html
+++ b/not-fun.html
@@ -164,6 +164,19 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="well winners-well" id="fake-ad">
+                    <div class="panel question-panel">
+                        <div class="panel-heading question-panel"></div>
+                        <div class="panel-body question-panel row center-block">
+                            <div class="question-text col-sm-12">
+                                <p>Това не е шега! Ти си единственият наследник на твой далечен братовчед! Завещал ти е 100,000,000 нигерийски найра! Само кликни на бутона!</p>
+                        </div>
+                        <div class="question-text col-sm-12">
+                            <button type="submit" href="http://www.nakov.com" id="i-want">Искам!</button>
+                        </div>
+                    </div>
+                </div>
                 
 
         </section>
