--- a/main.html
+++ b/main.html
@@ -7,8 +7,8 @@
     <script type="text/javascript" src="resources/js/js.js"></script>
 </head>
 <body>
-    <div>
-        <img src="resources/images/wheel.png"/>
-    </div>
+<a href="#">
+	<img src="resources/images/wheel.png"/>
+</a>
 </body>
 </html>
