Hover changes on buttons - not-fun

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <div class="row">
         <aside class="col-sm-3">
             <div class="panel panel-default">
-                <div class="panel-heading"><a href="pobediteli.html"><p id="text-resize">ПОБЕДИТЕЛИ</p></a></div>
+                <div class="panel-heading"><a href="winners.html"><p id="text-resize">ПОБЕДИТЕЛИ</p></a></div>
                 <div class="panel-body">
                     <div class="well text-center">
                         <a href="winners.html">
