--- a/ekip.html
+++ b/ekip.html
@@ -41,11 +41,11 @@
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
-                <li><a href="index.html">Вкъщи</a></li>
-                <li><a href="winners.html">Победители</a></li>
-                <li class="active"><a href="team.html">Екип</a></li>
-                <li><a href="http://starwars.wikia.com/wiki/Parmel_sector" target="_blank">Parmel</a></li>
-                <li><a href="not-fun.html">Не-забавна-страница!</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="pobediteli.html">Победители</a></li>
+                <li class="active"><a href="ekip.html">Екип</a></li>
+                <li><a href="#">Страница 3</a></li>
+                <li><a href="#">Страница 4</a></li>
             </ul>
             <form class="navbar-form navbar-right">
                 <div class="form-group input-group">
@@ -67,8 +67,8 @@
             <div class="panel panel-default">
                 <div class="panel-heading"><a href="pobediteli.html"><p id="text-resize">ПОБЕДИТЕЛИ</p></a></div>
                 <div class="panel-body">
-                    <div class="well text-center">
-                        <a href="winners.html">
+                    <a href="pobediteli.html">
+                        <div class="well text-center">
                             <h3>
                                 Бил Гейтс
                             </h3>
@@ -78,10 +78,10 @@
                             <p class="aside-p">
                                 Бил Гейтс си е играл с Наков в детската градина.
                             </p>
-                        </a>
-                    </div>
+                        </div>
+                    </a>
                     <div class="well text-center">
-                        <a href="winners.html">
+                        <a href="pobediteli.html">
                             <h3>
                                 Стив Джобс
                             </h3>
@@ -89,7 +89,7 @@
                                  alt="Jobs Pic">
 
                             <p class="aside-p">
-                                Стив Джобс е бил учител на Наков.
+                                Стив Джобс е бил учител в на Наков.
                             </p>
                         </a>
                     </div>
@@ -109,9 +109,9 @@
                         </figure>
                         <div class="ekip-text col-sm-9 col-xs-9" id="Nakov">
                             Наков е Най-Великият. Да се Свети Името Му.
-                            <br>
+                            </br>
                             Той е Началото и Краят. Той е и Пътя и Истината и Живота.
-                            <br>
+                            </br>
                             И който Го следва винаги ще му се компилира кода!
                             Той е толкова Велик, че е учил Чък Норис да програмира!
                         </div>
@@ -148,7 +148,7 @@
                             <figcaption class="figure-caption">Ники Банкин</figcaption>
                         </figure>
                         <div class="ekip-text col-sm-9 col-xs-9">
-                            Ники Банкин е такъв талантлив дизайнер, че когато Бог(Наков) създавал Земята, го извикал
+                            Ники Банкин е такъв талантлив дизайнер, че когато Бог(Наков) създавал Земята, го извигал
                             да Му помогне. Ники с готовност приел, но проекта по който работил най-усърдно, били
                             женските форми!
                         </div>
@@ -188,8 +188,8 @@
                             може да
                             създаде задача за изпит със затворени очи. Затова сред някои от студентите е известен и като
                             Човека-Дракон:
-                            <br>
-                            <br>
+                            </br>
+                            </br>
                             <a href="https://judge.softuni.bg/Contests/Compete/Results/Simple/115" target="_blank">
                                 Справка: Изпита по Java Fundamentals 04.10.2015</a>
                         </div>
@@ -207,7 +207,7 @@
                             <figcaption class="figure-caption">Наско</figcaption>
                         </figure>
                         <div class="ekip-text col-sm-9 col-xs-9 no-margin">
-                            Наско има коефициент на интелигентност 221! С едно повече от най-умния човек на Земята, което
+                            Наско има коефициент на ителигентност 221! С едно повече от най-умния човек на Земята, което
                             си е
                             време-пространствен парадокс. Той спокойно би могъл да отиде в Церн и да открие няколко нови
                             закона
@@ -230,7 +230,7 @@
                         </figure>
                         <div class="ekip-text col-sm-9 col-xs-9">
                             Трифон е най-новият член на екипа на СофтУни. Той наскоро беше посрещнат от Наков с думите:
-                            <br>
+                            </br>
                             "Welcome to the Force! But you are not a Jedi, yet!"
                         </div>
                     </div>
