--- a/not-fun.html
+++ b/not-fun.html
@@ -46,7 +46,7 @@
                 <li><a href="index.html">Вкъщи</a></li>
                 <li><a href="winners.html">Победители</a></li>
                 <li><a href="team.html">Екип</a></li>
-                <li><a href="parmel.html">Parmel</a></li>
+                <li><a href="http://starwars.wikia.com/wiki/Parmel_sector" target="_blank">Parmel</a></li>
                 <li class="active"><a href="not-fun.html">Не-забавна-страница!</a></li>
             </ul>
             <form class="navbar-form navbar-right">
