--- a/pobediteli.html
+++ b/pobediteli.html
@@ -41,11 +41,11 @@
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
-                <li><a href="index.html">Вкъщи</a></li>
-                <li  class="active"><a href="winners.html">Победители</a></li>
-                <li><a href="team.html">Екип</a></li>
-                <li><a href="http://starwars.wikia.com/wiki/Parmel_sector" target="_blank">Parmel</a></li>
-                <li><a href="not-fun.html">Не-забавна-страница!</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li class="active"><a href="pobediteli.html">Победители</a></li>
+                <li><a href="ekip.html">Екип</a></li>
+                <li><a href="#">Страница 3</a></li>
+                <li><a href="#">Страница 4</a></li>
             </ul>
             <form class="navbar-form navbar-right">
                 <div class="form-group input-group">
@@ -61,21 +61,6 @@
     </div>
 </nav>
 
-    <div class="panel winners-panel winners-header">
-        <div class="panel-heading winners-panel"></div>
-        <div class="panel-body winners-panel row center-block">
-            <div class="col-sm-3">
-                <img src="resources/images/cash.png" class="img-responsive winners-img" alt="Cash pic">
-            </div>
-            <div class="winners-text col-sm-9">Тук ще намерите кратка история на това как нашите
-                победители са стигнали до тук,
-                тежките мъки, на които са били подложени и
-                стоическите кодове, които са ги направили толкова богати,
-                че да не им се налага да искат пари на заем от приятели, за да си погасят вноската по кредита.
-            </div>
-        </div>
-    </div>
-
 <main class="container text-center">
     <div class="row">
         <aside class="col-sm-3">
@@ -83,7 +68,7 @@
                 <div class="panel-heading"><a href="ekip.html"><p>ЕКИП</p></a></div>
                 <div class="panel-body">
                     <div class="well text-center">
-                        <a href="team.html">
+                        <a href="ekip.html">
                             <h3>
                                 Наков
                             </h3>
@@ -97,7 +82,7 @@
                     </div>
 
                     <div class="well text-center">
-                        <a href="team.html">
+                        <a href="ekip.html">
                             <h3>
                                 Ангел
                             </h3>
@@ -138,7 +123,7 @@
                             <img src="resources/images/jobs.jpg" class="img-responsive winners-img" alt="Jobs pic">
                         </div>
                         <div class="winners-text col-sm-9">
-                            <br>
+                            </br>
                             Стив Джобс е бил учител в детската градина на Наков.
                             Когато Наков надминава учителя си, Джобс напуска за да създаде Епъл, но в крайна сметка не
                             остава програмист, а просто търговец и CEO.
@@ -155,8 +140,8 @@
                             <img src="resources/images/mark.jpg" class="img-responsive winners-img" alt="Mark pic">
                         </div>
                         <div class="winners-text col-sm-9">
-                            <br>
-                            Марк Зъкърбърг е учил в СофтУни. "Един от НЕ - топ студентите ми!" - както го определя Наков.
+                            </br>
+                            Марк Зъкърбърг е учил в СофтУни. "Един от НЕ - топ судентите ми!" - както го определя Наков.
                             Обиден Марк се депресира и напуска. В търсене на нови приятели, с които да сподели мъката си
                             той създава фейсбук.
                         </div>
@@ -171,7 +156,7 @@
                             <img src="resources/images/gaben.png" class="img-responsive winners-img" alt="Gabe pic">
                         </div>
                         <div class="winners-text">
-                            <br>
+                            </br>
                             Не може да се твърди че Гейб е учил в СофтУни.
                             Той прекарва изцяло времето си в кафето на университета играейки непрекъснато на конзола.
                             Когато Наков отива при него и му казва, че това е несериозно, Гейб си тръгва.
@@ -189,10 +174,10 @@
                             <img src="resources/images/page-brin.jpg" class="img-responsive winners-img" alt="Brin and Larry pic">
                         </div>
                         <div class="winners-text">
-                            <br>
+                            </br>
                             Сергей и Лари са конкуренти на Наков, още от детската градина. И те също искат да създадат
                             обучение по програмиране. Неспособни да се сравняват с Наков и неговата система, те основават
-                            обикновена търсачка в интернет.
+                            обиковена търсачка в интернет.
                         </div>
                     </div>
                 </div>
