--- a/main.html
+++ b/main.html
@@ -7,8 +7,8 @@
     <script type="text/javascript" src="resources/js/js.js"></script>
 </head>
 <body>
-<a href="#">
-	<img src="resources/images/wheel.png"/>
-</a>
+    <div>
+        <img src="resources/images/wheel.png"/>
+    </div>
 </body>
 </html>
